--- a/roles/common/handlers/main.yml
+++ b/roles/common/handlers/main.yml
@@ -1,5 +1,9 @@
+---
 - name: Restart rotctld
-  supervisorctl: name=rotctld state=restarted
-
+  supervisorctl:
+    name: 'rotctld'
+    state: 'restarted'
 - name: Restart satnogs
-  supervisorctl: name=satnogs state=restarted
+  supervisorctl:
+    name: 'satnogs'
+    state: 'restarted'
