--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Install required packages
-  action:
-    apt pkg: '{{ item }}'
+  package:
+    name: '{{ item }}'
     state: 'installed'
   with_items:
     - git
