--- a/roles/satnogs-client/tasks/main.yml
+++ b/roles/satnogs-client/tasks/main.yml
@@ -14,6 +14,7 @@
 - name: Install dependencies
   package:
     name: '{{ item }}'
+    state: 'latest'
   become: True
   with_items: '{{ satnogs_client_packages }}'
   notify:
