Use service module instead of systemd directly

--- a/roles/satnogs-client/tasks/main.yml
+++ b/roles/satnogs-client/tasks/main.yml
@@ -46,9 +46,8 @@
   become: True
   notify:
     - Restart satnogs-client service
-# TODO: Use service module instead of systemd directly
 - name: Start satnogs-client service
-  systemd:
+  service:
     name: 'satnogs-client'
     enabled: True
     state: 'started'
