--- a/roles/satnogs-client/tasks/main.yml
+++ b/roles/satnogs-client/tasks/main.yml
@@ -39,8 +39,8 @@
   notify:
     - Restart satnogs-client service
 - name: Add satnogs-client systemd service
-  copy:
-    src: 'etc/systemd/system/satnogs-client.service'
+  template:
+    src: 'etc/systemd/system/satnogs-client.service.j2'
     dest: '/etc/systemd/system/satnogs-client.service'
     mode: 0644
   become: True
