--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -5,3 +5,8 @@ satnogs_station_elev: '100'
 satnogs_station_id: '9999'
 satnogs_station_lat: '37.971'
 satnogs_station_lon: '23.725'
+
+hamlib_utils_rig_enabled: False
+hamlib_utils_rig_opts: '-m 1'
+hamlib_utils_rot_enabled: True
+hamlib_utils_rot_opts: '-m 1'
