Use tmpfs as a state dir for the client

--- a/roles/satnogs-client/tasks/main.yml
+++ b/roles/satnogs-client/tasks/main.yml
@@ -46,6 +46,16 @@
   become: True
   notify:
     - Restart satnogs-client service
+- name: Use tmpfs for state directory
+  mount:
+    path: '{{ satnogs_client_state_dir }}'
+    src: 'tmpfs'
+    fstype: 'tmpfs'
+    opts: 'rw,nosuid,noexec,nodev,noatime'
+    state: 'mounted'
+  become: True
+  notify:
+    - Restart satnogs-client service
 - name: Start satnogs-client service
   service:
     name: 'satnogs-client'
