--- a/roles/satnogs-radio/defaults/main.yml
+++ b/roles/satnogs-radio/defaults/main.yml
@@ -1,1 +1,1 @@
-satnogs_radio_gr_satnogs_package: 'https://github.com/acinonyx/gr-satnogs-package/releases/download/1.0%2Bgit20170805.0.6b0deac-1/gr-satnogs_1.0.git20170805.0.6b0deac-1_armhf.deb'
+satnogs_radio_gr_satnogs_package: 'https://gitlab.com/librespacefoundation/satnogs/gr-satnogs-package/builds/artifacts/master/raw/build/debian/output/{{ satnogs_radio_package_arch[ansible_architecture] }}/gr-satnogs_{{ satnogs_radio_package_arch[ansible_architecture] }}.deb?job=nightly'
