--- a/roles/satnogs-radio/vars/main.yml
+++ b/roles/satnogs-radio/vars/main.yml
@@ -5,3 +5,6 @@ satnogs_radio_packages:
 satnogs_radio_blacklist_modules:
   - 'dvb_usb_rtl28xxu'
 satnogs_radio_uhd_images_tag: '003.009.005'
+satnogs_radio_package_arch:
+  x86_64: 'amd64'
+  armv7l: 'armhf'
