Install Git to support 'pip install' directly from Git repositories
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -6,5 +6,6 @@ satnogs_client_packages:
   - 'redis-server'
   - 'libffi-dev'
   - 'libssl-dev'
+  - 'git'
   - 'gnuplot'
 satnogs_client_state_dir: '/tmp/.satnogs'
