Install 'acl' package to allow 'chown'ing when becoming unprivileged user
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -8,3 +8,4 @@
     that: ansible_distribution == distribution and ansible_distribution_release == distribution_release
     msg: 'This role requires {{ distribution }} {{ distribution_release }}.'
 - include: apt.yml
+- include: packages.yml
