--- a/roles/satnogs-radio/vars/main.yml
+++ b/roles/satnogs-radio/vars/main.yml
@@ -1,7 +1,7 @@
 satnogs_radio_packages:
   - 'gnuradio'
-  - 'libgnuradio-osmosdr0.1.4'
-  - 'libgnuradio-fcdproplus0'
+  - 'gr-osmosdr'
+  - 'gr-fcdproplus'
 satnogs_radio_blacklist_modules:
   - 'dvb_usb_rtl28xxu'
 satnogs_radio_uhd_images_tag: '003.009.005'
