Add 'satnogs-setup' role
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -2,6 +2,10 @@
 # SatNOGS client ansible configuration
 #
 
+#
+# SatNOGS setup script
+#
+#satnogs_setup_ansible_url: 'https://gitlab.com/librespacefoundation/satnogs/satnogs-client-ansible.git'
 
 #
 # SatNOGS client package
