--- a/roles/satnogs-client/tasks/main.yml
+++ b/roles/satnogs-client/tasks/main.yml
@@ -19,13 +19,21 @@
   with_items: '{{ satnogs_client_packages }}'
   notify:
     - Restart satnogs-client service
+- name: Uninstall satnogs-client
+  pip:
+    name: '{{ satnogs_client_name }}'
+    virtualenv: '/var/lib/{{ satnogs_client_user }}'
+    editable: False
+    state: 'absent'
+  become: True
+  become_user: '{{ satnogs_client_user }}'
 - name: Install satnogs-client
   pip:
     name: '{{ satnogs_client_url | default(satnogs_client_name) }}'
     version: '{{ satnogs_client_version if satnogs_client_url is undefined else omit }}'
     virtualenv: '/var/lib/{{ satnogs_client_user }}'
     editable: False
-    state: 'forcereinstall'
+    state: 'present'
   become: True
   become_user: '{{ satnogs_client_user }}'
   notify:
