Use 'import_*' directive to include tasks and playbooks
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/site.yml
+++ b/site.yml
@@ -1,5 +1,5 @@
 ---
-- include: satnogs-setups.yml
-- include: satnogs-clients.yml
-- include: satnogs-radios.yml
-- include: hamlib-utils.yml
+- import_playbook: satnogs-setups.yml
+- import_playbook: satnogs-clients.yml
+- import_playbook: satnogs-radios.yml
+- import_playbook: hamlib-utils.yml
