--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -7,5 +7,5 @@
   assert:
     that: ansible_distribution == distribution and ansible_distribution_release == distribution_release
     msg: 'This role requires {{ distribution }} {{ distribution_release }}.'
-- include: apt.yml
-- include: packages.yml
+- import_tasks: apt.yml
+- import_tasks: packages.yml
