Reload 'systemd' daemon before starting services
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-client/tasks/main.yml
+++ b/roles/satnogs-client/tasks/main.yml
@@ -72,7 +72,8 @@
   notify:
     - Restart satnogs-client service
 - name: Start satnogs-client service
-  service:
+  systemd:
+    daemon_reload: True
     name: 'satnogs-client'
     enabled: True
     state: 'started'
