--- a/roles/hamlib-utils/tasks/main.yml
+++ b/roles/hamlib-utils/tasks/main.yml
@@ -48,7 +48,8 @@
   notify:
     - Restart rotctld service
 - name: Start/stop rigctld service
-  service:
+  systemd:
+    daemon_reload: True
     name: 'rigctld'
     enabled: '{{ hamlib_utils_rig_enabled | default(False) }}'
     state: '{{ "started" if hamlib_utils_rig_enabled | default(False) else "stopped" }}'
@@ -56,7 +57,8 @@
   tags:
     - config
 - name: Start/stop rotctld service
-  service:
+  systemd:
+    daemon_reload: True
     name: 'rotctld'
     enabled: '{{ hamlib_utils_rot_enabled | default(False) }}'
     state: '{{ "started" if hamlib_utils_rot_enabled | default(False) else "stopped" }}'
