Enable ZRAM on low memory boards
* Fixes #19

Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -9,3 +9,5 @@
     msg: 'This role requires {{ distribution }} {{ distribution_release }}.'
 - import_tasks: apt.yml
 - import_tasks: packages.yml
+- import_tasks: zram.yml
+  when: ansible_memtotal_mb < zram_memtotal_min
