Update configuration of 'satnogs-setup' when applying without update
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-setup/tasks/main.yml
+++ b/roles/satnogs-setup/tasks/main.yml
@@ -5,6 +5,8 @@
     dest: '/etc/default/satnogs-setup'
     mode: 0644
   become: True
+  tags:
+    - config
 - name: Set up inventory
   copy:
     src: 'etc/ansible/hosts'
