--- a/roles/satnogs-radio/vars/main.yml
+++ b/roles/satnogs-radio/vars/main.yml
@@ -7,4 +7,5 @@ satnogs_radio_blacklist_modules:
 satnogs_radio_uhd_images_tag: '003.009.005'
 satnogs_radio_package_arch:
   x86_64: 'amd64'
+  armv6l: 'armhf'
   armv7l: 'armhf'
