Always replace 'gr-satnogs' package when updating
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-radio/tasks/main.yml
+++ b/roles/satnogs-radio/tasks/main.yml
@@ -19,6 +19,11 @@
     state: 'latest'
   become: True
   with_items: '{{ satnogs_radio_packages }}'
+- name: Uninstall gr-satnogs
+  apt:
+    name: 'gr-satnogs'
+    state: 'absent'
+  become: True
 - name: Install gr-satnogs
   apt:
     deb: '{{ satnogs_radio_gr_satnogs_package }}'
