Make sure that 'build-essential' and 'sudo' packages are installed
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/vars/main.yml
+++ b/roles/common/vars/main.yml
@@ -4,4 +4,6 @@ distribution: 'Debian'
 distribution_release: 'stretch'
 packages:
   - 'acl'
+  - 'build-essential'
+  - 'sudo'
 zram_memtotal_min: 2048
