Do not try to install latest version of packages
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/common/tasks/packages.yml
+++ b/roles/common/tasks/packages.yml
@@ -2,6 +2,6 @@
 - name: Install packages
   package:
     name: '{{ item }}'
-    state: 'latest'
+    state: 'present'
   become: True
   with_items: '{{ packages }}'
