--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -7,5 +7,7 @@ build:
     - echo "deb http://ppa.launchpad.net/ansible/ansible/ubuntu trusty main" > /etc/apt/sources.list.d/ansible.list
     - apt-key adv --keyserver keyserver.ubuntu.com --recv-keys 93C4A3FD7BB9C367
     - apt-get update
-    - apt-get -y install ansible
+    - apt-get -y install ansible python-pip
+    - pip install ansible-lint
     - ansible-playbook -i production.dist/inventory --syntax-check -vvv site.yml
+    - ansible-lint site.yml
