satnogs-client: Use global site-packages instead of building wheels
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -8,6 +8,12 @@ satnogs_client_packages:
   - 'libssl-dev'
   - 'git'
   - 'gnuplot'
+  - 'python-apscheduler'
+  - 'python-sqlalchemy'
+  - 'python-requests'
+  - 'python-dateutil'
+  - 'python-ephem'
+  - 'python-tz'
 satnogs_client_state_dir: '/tmp/.satnogs'
 satnogs_client_settings:
   - satnogs_api_token
