--- a/roles/satnogs-client/tasks/main.yml
+++ b/roles/satnogs-client/tasks/main.yml
@@ -19,10 +19,26 @@
   with_items: '{{ satnogs_client_packages }}'
   notify:
     - Restart satnogs-client service
+- name: Check for virtualenv with no access to global site-packages
+  stat:
+    path: '/var/lib/{{ satnogs_client_user }}/lib/python2.7/no-global-site-packages.txt'
+  register: res_no_global
+- name: Remove virtualenv
+  file:
+    path: '/var/lib/{{ satnogs_client_user }}/{{ item }}'
+    state: 'absent'
+  when: res_no_global.stat.exists and res_no_global.stat.isreg
+  with_items:
+    - 'bin'
+    - 'include'
+    - 'lib'
+    - 'local'
+    - 'share'
 - name: Uninstall satnogs-client
   pip:
     name: '{{ satnogs_client_name }}'
     virtualenv: '/var/lib/{{ satnogs_client_user }}'
+    virtualenv_site_packages: True
     editable: False
     state: 'absent'
   become: True
@@ -32,6 +48,7 @@
     name: '{{ satnogs_client_url | default(satnogs_client_name) }}'
     version: '{{ satnogs_client_version if satnogs_client_url is undefined else omit }}'
     virtualenv: '/var/lib/{{ satnogs_client_user }}'
+    virtualenv_site_packages: True
     editable: False
     state: 'present'
   retries: 5
