--- a/roles/satnogs-client/vars/main.yml
+++ b/roles/satnogs-client/vars/main.yml
@@ -7,13 +7,14 @@ satnogs_client_packages:
   - 'libffi-dev'
   - 'libssl-dev'
   - 'git'
-  - 'gnuplot'
   - 'python-apscheduler'
   - 'python-sqlalchemy'
   - 'python-requests'
   - 'python-dateutil'
   - 'python-ephem'
   - 'python-tz'
+  - 'python-matplotlib'
+  - 'python-numpy'
 satnogs_client_state_dir: '/tmp/.satnogs'
 satnogs_client_settings:
   - satnogs_api_token
