--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -74,3 +74,5 @@ satnogs_station_lon: '23.725'
 #hamlib_utils_rig_opts: '-m 1'
 hamlib_utils_rot_enabled: True
 hamlib_utils_rot_opts: '-m 1'
+snmpd_listen_addr_opts: udp:0.0.0.0:161
+snmpd_rocommunity_opts: public  default
