--- a/roles/snmpd/tasks/main.yml
+++ b/roles/snmpd/tasks/main.yml
@@ -41,3 +41,12 @@
   become: True
   notify:
     - Restart snmpd service
+- name: Start/stop snmpd service
+  systemd:
+    daemon_reload: True
+    name: 'snmpd'
+    enabled: '{{ snmpd_enabled | default(False) }}'
+    state: '{{ "started" if snmpd_enabled | default(False) else "stopped" }}'
+  become: True
+  tags:
+    - config
