Add option for manual power level range
Signed-off-by: Ilias Daradimos <ilias@libre.space>

--- a/production.dist/inventory/host_vars/satnogs/main.yml
+++ b/production.dist/inventory/host_vars/satnogs/main.yml
@@ -80,3 +80,10 @@ hamlib_utils_rot_opts: '-m 1'
 #
 #snmpd_agentaddress: 'udp:0.0.0.0:161'
 #snmpd_rocommunity: 'public default'
+
+#
+# Waterfall settings
+#
+satnogs_waterfall_autorange: True
+satnogs_waterfall_min_value: -100
+satnogs_waterfall_max_value: -50
