Do not restart services via handlers when they are disabled
Signed-off-by: Vasilis Tsiligiannis <acinonyx@openwrt.gr>

--- a/roles/hamlib-utils/handlers/main.yml
+++ b/roles/hamlib-utils/handlers/main.yml
@@ -4,12 +4,12 @@
     daemon_reload: True
     name: 'rigctld'
     enabled: '{{ hamlib_utils_rig_enabled | default(False) }}'
-    state: 'restarted'
+    state: '{{ "restarted" if hamlib_utils_rig_enabled | default(False) else "stopped" }}'
   become: True
 - name: Restart rotctld service
   systemd:
     daemon_reload: True
     name: 'rotctld'
     enabled: '{{ hamlib_utils_rot_enabled | default(False) }}'
-    state: 'restarted'
+    state: '{{ "restarted" if hamlib_utils_rot_enabled | default(False) else "stopped" }}'
   become: True
